# learn_rust_axum

./: .gitignore  cargo.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
app/: Cargo.toml  package-lock.json  package.json
app/src/: config.rs  error.rs  main.rs
app/src/models/: user.rs
chat/: Cargo.toml  chat.html
chat/src/: main.rs
consume-body-in-extractor-or-middleware/: Cargo.toml
consume-body-in-extractor-or-middleware/src/: main.rs
costomize-extractor-error/: Cargo.toml
costomize-extractor-error/src/: main.rs
db/: schema.sql
db/migrations/: 20220608132846_create_users_table.sql
error-handling-and-dependency-injection/: Cargo.toml
error-handling-and-dependency-injection/src/: main.rs
