[package]
name = "consume-body-in-extractor-or-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0" ,features = ["ws"] }
hyper = "0.14"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["map-request-body", "util","cors"] }
tracing = "0.1" 
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
